--- a/index.html
+++ b/index.html
@@ -12,4 +12,56 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+    // 监听页面copy事件
+   
+		function copy(){
+			      var body_element = document.body;
+            var selection;
+			      alert("复制成功")
+            // getSelection()方法可以返回一个Selection对象，用于表示用户选择的文本范围或插入符的当前位置。
+            // 当转换为字符串时，通过附加空字符串（""）或使用Selection.toString()，此对象将返回所选文本
+            selection = window.getSelection();
+            // console.log(selection);  //输出类型是对象类型;
+           // console.log(selection+"");  只输出已复制的文本内容
+        
+            // 自定义粘贴后要显示的内容    
+            var appendLink=`
+                    <br/>-----------------粘贴分割线----------------------------
+                    <br/>原文出自[ 我的个人博客 ]--github地址：https://github.com/zhu118110/vueProject.git"
+            `;
+
+            // 剪贴板对象 window.clipboardData   三个访问方法
+                    // 1.clearData(sDataFormat) 删除剪贴板中指定格式的数据。
+                    // 2.getData(sDataFormat) 从剪贴板获取指定格式的数据。
+                    // 3.setData("设置数据格式", 剪贴板中的数据) 给剪贴板赋予指定格式的数据。返回 true 表示操作成功。 数据格式有:"text","url","file","html","image"
+            // 
+
+            if (window.clipboardData) { // 只能在Internet Explorer用
+                var copytext = selection + appendLink;
+                alert(copytext)
+                window.clipboardData.setData ("Text", copytext);
+                return false;
+            }else{
+                // 谷歌以及其他浏览器兼容写法   只要按下复制时会执行
+                // 1.自定义粘贴后要显示的内容    
+                var copytext = selection + appendLink;
+                // 2.创建一个新的div，用来存放选中的文本内容，，，模仿IE中的剪贴板功能
+                var newdiv = document.createElement('div');
+                newdiv.style.position='absolute';
+                newdiv.style.left='0';
+                // 3.插入到body中
+                body_element.appendChild(newdiv);
+                newdiv.innerHTML = copytext;
+                // 4.selection.selectAllChildren(parentNode) 所有parentNode元素的子元素会被设为选中区域，parentNode本身除外。
+                selection.selectAllChildren(newdiv);
+                window.setTimeout(function() {
+                    body_element.removeChild(newdiv);
+                },0);
+            }
+       }
+       document.oncopy=copy
+
+
+  </script>
 </html>
